--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" href="./img/core-img/logo.jpeg">
+    <link rel="icon" href="./logo.jpeg">
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -36,7 +36,7 @@
     -->
     <title>Peicen Jiang's Design Collection</title>
   </head>
-  
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
