--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.jpeg" />
+
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <!-- Favicon -->
-    <link rel="icon" href="./logo.jpeg">
-
-    <!-- Core Stylesheet -->
-    <link rel="stylesheet" href="style.css">
-
-    <!-- <link rel="apple-touch-icon" href="logo192.png" /> -->
+    <link rel="apple-touch-icon" href="logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -34,9 +32,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Peicen Jiang's Design Collection</title>
+    <title>Design Manager</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -50,5 +47,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!--Script Area-->
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin />
+
+    <script
+      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+      crossorigin
+    />
+
+    <script
+      src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    />
+
+    <script>var Alert = ReactBootstrap.Alert;</script>
   </body>
 </html>
